feat:优化事件前端视图
